--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
  </body>
  <script type="text/javascript">
     function checkPswd() {
-        var confirmPassword = "admin";
+        var confirmPassword = "YEABOII'S/Zari's";
         var password = document.getElementById("pswd").value;
         if (password == confirmPassword) {
              window.location="chat.html";
