--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
         text-align: center;
         color:green
     }
+    body{
+        background-color: black;
+    }
+    
  </style>
  <body>
 <h1>Type the password :)</h1>
